Fix misaligned icons for filter-group

--- a/application/static/stylesheets/dl-frontend.css
+++ b/application/static/stylesheets/dl-frontend.css
@@ -7403,7 +7403,7 @@
 
 .filter-group__icon {
   position: absolute;
-  top: -3px;
+  top: 0;
   right: 10px;
   width: 30px;
   height: 35px;
