--- a/src/scss/components/_filter-group.scss
+++ b/src/scss/components/_filter-group.scss
@@ -23,7 +23,7 @@
 
 .filter-group__icon {
   position: absolute;
-  top: -3px;
+  top: 0;
   right: 10px;
   width: 30px;
   height: 35px;
